# wwwpy-dev-site

./: .gitignore  .gitmodules  README.md  pyproject.toml
email-import/: .gitignore  pyproject.toml
email-import/common/: cleanuplib.py  file.html  fix_img.py
email-import/html/: html-editor-claude.html
email-import/remote/: __init__.py  html_editor.py
email-import/server/: cleanup_eml.py  cleanup_main.py  extract_eml.py  rpc.py
email-import/tests/: fix_img_test.py
pelican-site/: Makefile  pelicanconf.py  publishconf.py  tasks.py
pelican-site/content/: mock-post.md  week-2025-02.md  week-2025-07.md  week-2025-09.md  week-2025-10.md  week-2025-17.md  week-2025-20.md  week-2025-21.md
pelican-site/content/2025/: week-2025-03.md  week-2025-04.md  week-2025-05.md  week-2025-06.md  week-2025-08.md  week-2025-11.md  week-2025-12.md  week-2025-13.md  week-2025-14.md  week-2025-15.md  week-2025-17.md  week-2025-18.md  week-2025-19.md  week-2025-20.md  week-2025-21.md  week-2025-22.md  week-2025-23.md
